--- a/.github/workflows/build-container-image.yml
+++ b/.github/workflows/build-container-image.yml
@@ -1,15 +1,10 @@
 name: 'build-container-image'
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_call:
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
