--- a/.github/workflows/build-container-image.yml
+++ b/.github/workflows/build-container-image.yml
@@ -2,6 +2,31 @@ name: 'build-container-image'
 
 on:
   workflow_call:
+    inputs:
+      imageRegistry:
+        required: true
+        type: string
+      imageName:
+        required: true
+        type: string
+      imageBuildContext:
+        required: true
+        type: string
+      repositoryName:
+        required: true
+        type: string
+      user:
+        required: true
+        type: string
+      tag:
+        required: true
+        type: string
+        description: 'The tag to use for the docker image'
+      tag_latest:
+        default: false
+        required: false
+        type: string
+        description: 'Should tag latest on the docker image'
 
 jobs:
   build:
