--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     with:
       imageRegistry: ghcr.io
       imageName: ${{ github.repository }}
-      imageBuildContext: ./gitlab-runner-docker
+      imageBuildContext: ./
       repositoryName: ${{ github.event.repository.name }}
       user: ho-cto
       tag: ${{ github.sha }}
