--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,7 @@ jobs:
       user: ho-cto
       tag: ${{ github.sha }}
     secrets: inherit
+    
+  push-image:
+    uses: ./.github/workflows/push-image.yml
   
